# simavr

./: CMakeLists.txt  README.rst  genindex.html  github-main.html  gitorious-get-started.html  gitorious-index.html  gitorious-links.html  gitorious-main.html  gitorious-tips.html  index-orig.html  index.html  objects.inv  params.json  search.html  searchindex.js
doc/doxygen/: Doxyfile
doxygen/: avr__adc_8c.html  avr__adc_8c__incl.md5  avr__adc_8c_a1eebcc613c29e6cee125af445b48907a_cgraph.map  avr__adc_8c_a1eebcc613c29e6cee125af445b48907a_cgraph.md5  avr__adc_8c_a1eebcc613c29e6cee125af445b48907a_icgraph.map  avr__adc_8c_a1eebcc613c29e6cee125af445b48907a_icgraph.md5  avr__adc_8c_a5365e2999bb1429a6e43aae24a7de2df_cgraph.map  avr__adc_8c_a5365e2999bb1429a6e43aae24a7de2df_cgraph.md5  avr__adc_8c_a5365e2999bb1429a6e43aae24a7de2df_icgraph.map  avr__adc_8c_a5ac61f7a420c36c598ba4450e14f15e0_cgraph.md5  avr__adc_8c_a857ffd710c2d81cbc8a873053d081fea_cgraph.map  avr__adc_8c_a857ffd710c2d81cbc8a873053d081fea_icgraph.map  avr__adc_8c_a857ffd710c2d81cbc8a873053d081fea_icgraph.md5  avr__adc_8c_ab822fdd9ce0204aec6af5e0749632157_icgraph.map  avr__adc_8c_abdff38686087932dd4e35301e14d0f1b_cgraph.map  avr__adc_8c_abdff38686087932dd4e35301e14d0f1b_cgraph.md5  avr__adc_8c_abdff38686087932dd4e35301e14d0f1b_icgraph.md5  avr__adc_8c_aca0c3d18901028337ce7eb93cfea2ee5_cgraph.map  avr__adc_8c_aca0c3d18901028337ce7eb93cfea2ee5_cgraph.md5  avr__adc_8c_aca0c3d18901028337ce7eb93cfea2ee5_icgraph.md5  avr__adc_8c_af8e448ba58a83dccb789ec4bb7945f9d_cgraph.map  avr__adc_8h.js  avr__adc_8h__dep__incl.md5  avr__bitbang_8c.js  avr__bitbang_8c__incl.map  avr__bitbang_8c_a501013cd68650d548465cadd2d8a3e27_cgraph.map  avr__bitbang_8c_a501013cd68650d548465cadd2d8a3e27_cgraph.md5  avr__bitbang_8c_a501013cd68650d548465cadd2d8a3e27_icgraph.map  avr__bitbang_8c_a9e9c676a40a5b7c5142728f0e13a7999_cgraph.map  avr__bitbang_8c_a9e9c676a40a5b7c5142728f0e13a7999_cgraph.md5  avr__bitbang_8c_a9e9c676a40a5b7c5142728f0e13a7999_icgraph.md5  avr__bitbang_8c_abc26e7d7ed9d7296478d30aa7d9e53e1_icgraph.map  avr__bitbang_8c_abc26e7d7ed9d7296478d30aa7d9e53e1_icgraph.md5  avr__bitbang_8c_ae7d8463fda6d14db3b8b0cd7bf31c1f5_cgraph.map  avr__bitbang_8c_afba0c5b06c4bd48a803989066f0b2be4_cgraph.md5  avr__bitbang_8c_afba0c5b06c4bd48a803989066f0b2be4_icgraph.map  avr__bitbang_8h.js  avr__bitbang_8h__dep__incl.map  avr__bitbang_8h_source.html  avr__eeprom_8c_a3da5a9cb7e429ab8553c740d6526bb9c_icgraph.map  (+867 more)
doxygen/html/: annotated.html  annotated.js  avr__adc_8c.js  avr__adc_8c__incl.map  avr__adc_8c_a5365e2999bb1429a6e43aae24a7de2df_icgraph.md5  avr__adc_8c_a5ac61f7a420c36c598ba4450e14f15e0_cgraph.map  avr__adc_8c_a5ac61f7a420c36c598ba4450e14f15e0_icgraph.map  avr__adc_8c_a5ac61f7a420c36c598ba4450e14f15e0_icgraph.md5  avr__adc_8c_a857ffd710c2d81cbc8a873053d081fea_cgraph.md5  avr__adc_8c_aa3e413e5546b8c89b1338f6033cb45c7_cgraph.map  avr__adc_8c_aa3e413e5546b8c89b1338f6033cb45c7_cgraph.md5  avr__adc_8c_aa3e413e5546b8c89b1338f6033cb45c7_icgraph.map  avr__adc_8c_aa3e413e5546b8c89b1338f6033cb45c7_icgraph.md5  avr__adc_8c_ab822fdd9ce0204aec6af5e0749632157_cgraph.md5  avr__adc_8c_abdff38686087932dd4e35301e14d0f1b_icgraph.map  avr__adc_8c_aca0c3d18901028337ce7eb93cfea2ee5_icgraph.map  avr__adc_8c_af8e448ba58a83dccb789ec4bb7945f9d_cgraph.md5  avr__adc_8h.html  avr__adc_8h__dep__incl.map  avr__adc_8h__incl.map  avr__adc_8h__incl.md5  avr__adc_8h_a6c1ba6d528dd6a3adc3b0c393922ed2c_cgraph.map  avr__adc_8h_source.html  avr__bitbang_8c.html  avr__bitbang_8c__incl.md5  avr__bitbang_8c_a501013cd68650d548465cadd2d8a3e27_icgraph.md5  avr__bitbang_8c_a9e9c676a40a5b7c5142728f0e13a7999_icgraph.map  avr__bitbang_8c_abc26e7d7ed9d7296478d30aa7d9e53e1_cgraph.map  avr__bitbang_8c_abc26e7d7ed9d7296478d30aa7d9e53e1_cgraph.md5  avr__bitbang_8c_ae7d8463fda6d14db3b8b0cd7bf31c1f5_cgraph.md5  avr__bitbang_8c_ae7d8463fda6d14db3b8b0cd7bf31c1f5_icgraph.map  avr__bitbang_8c_ae7d8463fda6d14db3b8b0cd7bf31c1f5_icgraph.md5  avr__bitbang_8c_afba0c5b06c4bd48a803989066f0b2be4_cgraph.map  avr__bitbang_8c_afba0c5b06c4bd48a803989066f0b2be4_icgraph.md5  avr__bitbang_8h.html  avr__bitbang_8h__dep__incl.md5  avr__bitbang_8h__incl.map  avr__bitbang_8h__incl.md5  avr__eeprom_8c.html  avr__eeprom_8c.js  (+1062 more)
doxygen/search/: all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_2.js  defines_5.js  defines_b.js  defines_d.js  defines_e.js  enums_0.js  enums_2.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_a.js  files_0.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  groups_0.js  groups_1.js  groups_4.js  groups_5.js  groups_6.js  (+15 more)
examples/: CMakeLists.txt
examples/board_ledramp/: CMakeLists.txt
examples/board_simduino/: CMakeLists.txt  simduino.c
examples/boards/: CMakeLists.txt
examples/boards/board_hd77480/: charlcd.c
examples/featured/: CMakeLists.txt
examples/featured/analog-in-out-serial/: potentiometer.c  potentiometer.h
examples/featured/blink-led/: blink-led.c
examples/featured/fade-led/: fade-led.c
examples/featured/uart/: CMakeLists.txt
examples/parts/: hc595.c  hc595.h  (+8 more)
firmwares/: CMakeLists.txt
firmwares/blink-led/: CMakeLists.txt
simavr/: CMakeLists.txt
simavr/cores/: sim_mega2560.c
simavr/include/: avr_adc.h  avr_bitbang.h  avr_eeprom.h  avr_extint.h  avr_flash.h  avr_ioport.h  avr_lin.h  avr_spi.h  avr_timer.h  avr_twi.h  avr_uart.h  avr_usb.h  avr_watchdog.h  fifo_declare.h  sim_avr.h  sim_avr_types.h  sim_core.h  sim_cycle_timers.h  sim_elf.h  sim_gdb.h  sim_hex.h  sim_interrupts.h  sim_io.h  sim_irq.h  sim_network.h  sim_regbit.h  sim_time.h  sim_vcd_file.h
simavr/include/avr/: avr_mcu_section.h
simavr/source/: avr_bitbang.c  avr_flash.c  avr_ioport.c  avr_timer.c  sim_avr.c  sim_core.c  sim_cycle_timers.c  sim_elf.c  sim_gdb.c  sim_io.c  sim_irq.c  sim_vcd_file.c
static/: classic.css
tests/: CMakeLists.txt  Makefile.legacy
(+73 files in other folders)
