####################################################################################################

set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ArduinoToolchain.cmake) # Arduino Toolchain

cmake_minimum_required(VERSION 2.8)

project(Firmwares C CXX)

####################################################################################################

set(ARDUINO_DEFAULT_BOARD mega2560)

set(FIRMWARES_BINARY_DIR ${SIMAVR_BINARY_DIR}/firmwares)

####################################################################################################

add_subdirectory(blink-led)

####################################################################################################
#
# End
#
####################################################################################################
