# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

add_subdirectory(board_ledramp)
add_subdirectory(board_simduino)

####################################################################################################
#
# End
#
####################################################################################################
