# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

add_subdirectory(blink-led)
add_subdirectory(uart)

####################################################################################################
#
# End
#
####################################################################################################
